--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "prettier": "^2.1.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
