Re-init project with old boilerplate

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,24 +1,5 @@
-node_modules
-npm-debug.log
-Dockerfile*
-docker-compose*
-.dockerignore
-.git
-.gitignore
+.vscode/
+node_modules/
+dist/
 .env
-*/bin
-*/obj
-README.md
-LICENSE
-.vscode
-azure-pipelines.yml
-.azure-pipelines
-.editorconfig
-.eslintrc.json
-.nycrc
-.sequelizerc
-jsconfig.json
-test-results
-test
-scripts
-config/*.example
+package-lock.json
