--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.0",
-    "prettier": "^2.1.2"
+    "nodemon": "^2.0.6",
+    "prettier": "^2.1.2",
+    "standard": "^15.0.0"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.10"
   }
 }
