--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This README would normally document whatever steps are necessary to get your application up and running.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js",
+    "lint": "standard"
   },
   "repository": {
     "type": "git",
@@ -14,7 +15,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/joaopaulolazari/premium-minds#readme",
   "devDependencies": {
-    "eslint": "^7.2.0",
+    "eslint": "^7.12.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-import": "^2.21.2",
@@ -27,6 +28,7 @@
     "standard": "^15.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.10"
   }
