--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,14 @@
 {
-  "extends": ["airbnb", "prettier", "plugin:jest/recommended"],
-  "plugins": ["prettier", "jest"],
+  "extends": [
+    "airbnb",
+    "prettier"
+  ],
+  "plugins": [
+    "prettier"
+  ],
   "rules": {
-    "prettier/prettier": ["error"],
-    "comma-dangle": ["error", "never"],
-    "max-len": ["error", { "code": 120 }],
-    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
+    "prettier/prettier": [
+      "error"
+    ]
   },
-  "settings": {
-    "react": {
-      "version": "999.999.999"
-    }
-  }
 }
