--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "lint": "standard"
+    "lint": "standard",
+    "test": "cross-env NODE_ENV=TEST mocha --config test/.mocharc.unit.json --exit"
   },
   "repository": {
     "type": "git",
@@ -15,6 +16,8 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/joaopaulolazari/premium-minds#readme",
   "devDependencies": {
+    "chai": "^4.2.0",
+    "cross-env": "^7.0.2",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.14.0",
@@ -23,6 +26,9 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.0",
+    "mocha": "^8.2.0",
+    "mocha-multi-reporters": "^1.1.7",
+    "mongodb-memory-server": "^6.9.2",
     "nodemon": "^2.0.6",
     "prettier": "^2.1.2",
     "standard": "^15.0.0"
