--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "standard": "^15.0.0"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-joi-validation": "^5.0.0",
