--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^4.17.1",
     "express-joi-validation": "^5.0.0",
     "joi": "^17.3.0",
-    "mongoose": "^5.10.10"
+    "mongoose": "^5.10.10",
+    "swagger-ui-express": "^4.1.4"
   }
 }
